# cambridge

./: .env  .gitattributes  .gitignore  Dockerfile  Dockerfile.django  Dockerfile.static  Procfile  README.md  app.json  cambridge_bank_reports.csv  docker-compose.yml  docker_settings.py  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  webpack.config.js
campaign_finance/: admin.py  admin_urls.py  apps.py  models.py  urls.py  views.py
citycouncil/: manage.py  prod_settings.py  registration_urls.py  requirements.txt  settings.py  stage_settings.py  urls.py  wsgi.py
comparison/: tests.py  urls.py  views.py
css/: navbar-fixed-top.css
django_app/: current_elections.yaml
javascript_app/: package-lock.json  package.json  webpack.config.js
overview/: admin.py  context_processors.py  factories.py  models.py  public_comment.csv  tests.py  urls.py  utils.py  views.py
pages/: all.html  cand_marc.html
ranking/: __init__.py  admin.py  apps.py  context_processors.py  factories.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
requirements/: dev-requirements.txt  prod-requirements.txt
static/: base.css  candidate_sidebar.js  voting_record.csv  voting_record.json  voting_record.prepared.json
static_compiled/: by_organization.js  drag_list.js  drag_list.js.LICENSE.txt  main.js  main.js.LICENSE.txt  public_comment.js  voter_history.js
static_src/: by_organization.js  candidate_sidebar.js  drag_list.js  index.js  main.js  public_comment.js  voter_history.js
staticfiles/: by_organization.js  empty.txt  (+4 more)
(+303 files in other folders)
