requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "cambridge-vote"
version = "2025.0.1"
dependencies = [
    "dj-database-url",
    "Django",
    "bs4",
    "gunicorn",
    "psycopg2-binary==2.9.10",
    "whitenoise",
    "requests",
    "Pillow",
    "django-fullurl",
    "markdown",
    "factory_boy",
    "django-crispy-forms",
    "crispy-bootstrap4",
    "django-registration",
    "pyyaml",  # support fixture file
]

[project.optional-dependencies]
dev = [
    "black>24.0",
    "django-debug-toolbar",
    "flake8",
    "flake8-django",
    "flake8-pyproject",
    "ipython",
    "isort",
    "mypy>1.2",
]


###########################################(this long)############################################
[tool.black]
line-length=99

[tool.isort]
profile="black"

max-line-length=99
max-doc-length=79